deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quinque-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - quinque.jamiebuckley.dev
      secretName:  quinque-api-certificate
  rules:
    - host: quinque.jamiebuckley.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quinque-api
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: quinque-api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: quinque-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quinque-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quinque-api
  template:
    metadata:
      labels:
        app: quinque-api
    spec:
      containers:
        - name: quinque-api
          image: registry.jamiebuckley.dev/quinque-api-app:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
